Fixed gulp dependency bug in node version >12 Fixed bug where projects overlap on mobile device Removed margin after about me Added git ignore

--- a/src/scss/experience.scss
+++ b/src/scss/experience.scss
@@ -49,11 +49,9 @@
       }
     }
     &:nth-child(odd) {
-      margin-top: 20px;
-      margin-bottom: -100px;
 
       @media #{$tablet} {
-        margin-top: 160px;
+        margin-top: 100px;
         margin-left: 7%;
         &:after {
           left: -8%;
