--- a/src/scss/lead.scss
+++ b/src/scss/lead.scss
@@ -1,7 +1,7 @@
 .lead {
-  padding: 30px 0 100px;
+  padding: 30px 0 0px;
   @media #{$tablet} {
-    padding: 115px 0;
+    padding: 115px 0 0px;
   }
   &__heading {
     animation: slideUp 750ms both;
